Fixed Titles and made them more consistent

--- a/Bangladesh/index.html
+++ b/Bangladesh/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
+    <title>Flag of Bangladesh</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="flag">
-      <p>
-        The Flag of
-      </p>
       <div class="circle">
-        <p>
-          Bangladesh
-        </p>
       </div>
 
     </div>
