--- a/France/index.html
+++ b/France/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
+    <title>Flag of France</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="flag">
-      <div class="blue"><p class="text">The</p></div>
-      <div class="white"><p class="text">French</p></div>
-      <div class="red"><p class="text">Flag</p></div>
+      <div class="blue"></div>
+      <div class="white"></div>
+      <div class="red"></div>
     </div>
   </body>
 </html>
