--- a/DenmarkSwedenFinland/index.html
+++ b/DenmarkSwedenFinland/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Denmark Perfect Proportions</title>
+    <title>Swappable Denmark Sweden Finland with Denmark Flag proportions</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
