--- a/Germany/index.html
+++ b/Germany/index.html
@@ -3,20 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Flag of Germany</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="flag">
-      <div class="black">
-        <p>Flag</p>
-      </div>
-      <div class="red">
-        <p>of</p>
-      </div>
-      <div class="yellow">
-        <p>Germany</p>
-      </div>
+      <div class="black"></div>
+      <div class="red"></div>
+      <div class="yellow"></div>
     </div>
   </body>
 </html>
