--- a/Romania/index.html
+++ b/Romania/index.html
@@ -3,20 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
+    <title>Flag of Romania</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="flag">
-      <div class="blue">
-        <p>The</p>
-      </div>
-      <div class="yellow">
-        <p>Romania</p>
-      </div>
-      <div class="red">
-        <p>Flag</p>
-      </div>
+      <div class="blue"></div>
+      <div class="yellow"></div>
+      <div class="red"></div>
     </div>
   </body>
 </html>
