--- a/USA/index.html
+++ b/USA/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>'Murica THE LAND OF FREEDOM</title>
+    <title>Flag of the United States Of America</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
