Made all the flags except USA. Updated colors and structure. Deleted romania because its just france with diffrent colors.

--- a/France/index.html
+++ b/France/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="flag">
-      <div class="blue"></div>
-      <div class="white"></div>
-      <div class="red"></div>
+      <div class="left-stripe"></div>
+      <div class="mid-stripe"></div>
+      <div class="right-stripe"></div>
     </div>
   </body>
 </html>
