--- a/Germany/index.html
+++ b/Germany/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="flag">
-      <div class="black"></div>
-      <div class="red"></div>
-      <div class="yellow"></div>
+      <div class="top-stripe"></div>
+      <div class="mid-stripe"></div>
+      <div class="btm-stripe"></div>
     </div>
   </body>
 </html>
