--- a/Poland/index.html
+++ b/Poland/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
+    <title>Flag of Poland</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="flag">
-      <div class="white">
-      </div>
-      <div class="red">
-      </div>
+      <div class="top-stripe"></div>
+      <div class="btm-stripe"></div>
     </div>
   </body>
 </html>
