--- a/Switzerland/index.html
+++ b/Switzerland/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>France Flag</title>
+    <title>Flag of Switzerland</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -15,6 +15,7 @@
       </div>
     </div>
     <script>
+      // An experiment
       const unitSlider = document.getElementById("unit-slider");
 
       function updateUnit() {
