USA flag update. The stripes are now a repeating gradient.

--- a/USA/index.html
+++ b/USA/index.html
@@ -78,21 +78,7 @@
           <div class="star"></div>
         </div>
       </div>
-      <div class="stripes">
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-        <div class="white-stripe"></div>
-        <div class="red-stripe"></div>
-      </div>
+      <div class="stripes"></div>
     </div>
   </body>
 </html>
