--- a/St Lucia not done/index.html
+++ b/St Lucia not done/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flag of St Lucia</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="flag">
-        <div id="white"></div>
-        <div id="black"></div>
-        <div id="yellow"></div>
+      <div class="white"></div>
+      <!-- <div class="black-container"> -->
+        <div class="black"></div>
+      <!-- </div> -->
+      <div class="yellow"></div>
     </div>
 
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
